--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -26,36 +26,58 @@ layout: default
     <div class="page__inner-wrap">
       {% unless page.header.overlay_color or page.header.overlay_image %}
         <header>
-          {% if page.title %}<h1 class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
-          {% if page.read_time %}
-            <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
-          {% endif %}
+	{% if page.title and page.venue %}<h1 class="page__title" itemprop="headline">[{{ page.venue }}]&nbsp;{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>
+	{% elsif page.title %}<h1 class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
+        {% if page.read_time %}
+          <p class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</p>
+        {% endif %}
         {% if page.modified %}
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.modified | date: "%Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time></p>
         {% endif %}
         
         {% if page.collection == 'teaching' %}
           <p> {{ page.type }}, <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
-        {% elsif page.venue and page.date %}
-          <p>Published in <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
+        
+	{% elsif page.venue and page.date %}
+	<!--<p>Published in <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>-->
         {% elsif page.date %}
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
-        
-             
-        {% if page.citation and page.paperurl %}
-          <p>Recommended citation: {{ page.citation }} <a href="{{ page.paperurl }}"><u>{{ page.paperurl }}</u></a></p>
-        {% elsif page.citation %}
-          <p>Recommended citation: {{ page.citation }} </p>
-        {% endif %}
+         
     
         </header>
       {% endunless %}
 
       <section class="page__content" itemprop="text">
+	{% if page.excerpt %}
+	<p><i>{{ page.excerpt }}</i></p>
+	{% endif %}
+	
+	{% if page.teaser %} 
+	<div class="archive__item-teaser">
+        <img src=
+          {% if page.teaser contains "://" %}
+            "{{ teaser }}"
+          {% else %}
+            "{{ page.teaser | prepend: "/images/" | prepend: base_path }}"
+          {% endif %}
+          alt="">
+        </div>       
+	{% endif %}
+
+        {% if page.citation and page.paperurl %}
+	  <p>Recommended citation: {{ page.citation }}</p>
+	  <p><a href="{{ page.paperurl }}"><u>View PDF</u></a></p>
+          <hr>
+	{% elsif page.citation %}
+          <p>Recommended citation: {{ page.citation }} </p>
+        {% endif %}
+	
         {{ content }}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
+
+	
 
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
