--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -30,7 +30,13 @@
       {% if post.link %}
         <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% elsif post.collection == 'publications' %}
+       {% comment %}
        [{{ post.venue }}]&nbsp;<a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+       {% endcomment %} 
+       
+	[{{ post.venue }}]&nbsp;{{ title }}
+        {% if post.paperurl %} [<a href="{{post.paperurl}}" rel="permalink" target="_blank">PDF</a>] {% endif %}
+	{% if post.posterurl %} [<a href="{{post.posterurl}}" rel="permalink" target="_blank">Poster</a>] {% endif %}
       {% else %}
         <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
