--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -25,6 +25,7 @@
       }
     }
   }
+
 }
 
 .archive__subtitle {
@@ -43,9 +44,11 @@
   margin-bottom: 0.25em;
   font-family: $sans-serif-narrow;
 
+  /*
   a + a {
     opacity: 0.5;
   }
+  */
 }
 
 /* remove border*/
@@ -74,6 +77,7 @@
   }
 }
 
+/*
 .archive__item:hover {
   .archive__item-teaser {
     box-shadow: 0 0 10px rgba(#000, 0.25);
@@ -83,7 +87,7 @@
     text-decoration: underline;
   }
 }
-
+*/
 
 /*
    List view
