--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,6 +16,7 @@ $indent-var                 : 1.3em;
 $serif                      : Georgia, Times, serif;
 $sans-serif                 : -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
 $monospace                  : Monaco, Consolas, "Lucida Console", monospace;
+$modern			    : Arial, sans-serif;
 
 /* sans serif typefaces */
 $sans-serif-narrow          : $sans-serif;
@@ -28,7 +29,7 @@ $bodoni                     : "Bodoni MT", serif;
 $calisto                    : "Calisto MT", serif;
 $garamond                   : Garamond, serif;
 
-$global-font-family         : $sans-serif;
+$global-font-family         : $modern;
 $header-font-family         : $sans-serif;
 $caption-font-family        : $serif;
 
